# rodizio-closers

./: .gitignore  README.md  demo.py  pyproject.toml  render.yaml  requirements.txt  setup_google.py
app/: calendar_provider.py  engine.py  google_calendar.py  main.py  models.py
static/: app.js  index.html  style.css
tests/: test_engine.py
